lennon fixed cursor alignment, added text to about page

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ body {
     background-color: firebrick;
     padding: 12px;
     border-radius: 4px;
-    cursor: url('imgs/knifeCursorSelect.png'), auto;
+    cursor: url('imgs/knifeCursorSelect.png'), ;
 }
 
 .nav-logo img {
@@ -410,4 +410,27 @@ img {vertical-align: middle;}
 
 .movie-title {
   font-size: 150%;
+}
+
+.divAbout{
+  font-size: 150%;
+  color: firebrick;
+  align-items: normal;
+  margin-left: 5%;
+  width: 100%;
+}
+
+p1 {
+  color: white;
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.aboutUs{
+  width: 65%;
+}
+
+.developers{
+  width: 30%;
+  float: right;
 }
